@@ -25,10 +25,23 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
 	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '9.3.0'
+	implementation 'com.google.cloud:google-cloud-firestore:3.24.3'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testImplementation 'org.mockito:mockito-core:5.4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+}
+
+test{
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+	jvmArgs '-Xshare:auto'
 }
 
 tasks.named('test') {
